# text-extractor

./: .env.example  .gitignore  .gitignore.swp  pyproject.toml  yoyo.ini
extractor_app/: app.py  database.py  llm.py  schema.py
migrations/: 20241230_01_e1O4A-create-table-company-details.py
templates/layouts/: base.html
templates/pages/: display.html  home.html  import.html
templates/partials/: navbar.html
